@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-07-21T16:21:39Z",
+  "timestamp" : "2022-07-22T08:21:48Z",
   "count_outdated" : 406,
   "uniques_outdated" : 233,
-  "count" : 431,
+  "count" : 430,
   "uniques" : 249,
   "clones" : [
     {
       "timestamp": "2022-07-08T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
