@@ -1,3 +1,10 @@
+2022-07-22T08:21:48Z:
+* notice: last 14d: unq all: 5 24
+* notice: prev accum: outdated-unq outdated-all / unq all: 233 406 / 249 431
+* notice: next accum: outdated-unq outdated-all / unq all: 233 406 / 249 430
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
+* notice: removed / changed dates: [] / [2022-07-08]
+
 2022-07-21T16:21:39Z:
 * notice: last 14d: unq all: 5 25
 * notice: prev accum: outdated-unq outdated-all / unq all: 232 404 / 248 430
